@@ -1,3 +1,7 @@
+2001-11-04  "stefan" <stefan@lkcc.org>
+
+	* include/sys/locking.h (_LK_UNLCK, LK_UNLCK): Correct names.
+
 2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/io.h (_commit): Add declaration.
